test/message/promise_always_throw_unhandled.out
*promises.js:*
          throw err;
          ^

Error: One
    at Promise (*promise_always_throw_unhandled.js:*:*)
    at new Promise (<anonymous>)
    at Object.<anonymous> (*promise_always_throw_unhandled.js:*:*)
    at *
    at *
    at *
    at *
    at *
    at *
    at *
